--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <nav>
-            <ul><li><a href="/sobremi.html">Sobre mi</a></li></ul>
+            <ul><li><a href="cvFrancoOrtiz/sobremi.html">Sobre mi</a></li></ul>
         </nav>
         <section>
             <h2 class="titulo subtitulo">DATOS PERSONALES</h2>
