--- a/sobremi.html
+++ b/sobremi.html
@@ -4,7 +4,7 @@
 
     <body>
         <nav> 
-        <a href="/index.html">Home</a>
+        <a href="cvFrancoOrtiz/index.html">Home</a>
         </nav>
     
         <section>
