--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
     </header>
     <main>
         <nav>
-            <ul><li><a href="cvFrancoOrtiz/sobremi.html">Sobre mi</a></li></ul>
+            <ul>
+                <li><a href="sobremi.html">Sobre mi</a></li>
+                <li><a href="#personal">Datos personales</a></li>
+                <li><a href="#academic">Datos academicos </a></li>
+                <li><a href="#technical">Conocimientos tecnicos</a></li>
+                <li><a href="#courses">Cursos</a></li>
+                <li><a href="#exp">Experiencia laboral</a></li>
+                <li><a href="#rrss">Redes</a></li>
+            </ul>
         </nav>
-        <section>
+        <section id="personal">
             <h2 class="titulo subtitulo">DATOS PERSONALES</h2>
             <ul>
                 <li><span  class="fechas">Nombre Completo:</span> Franco Ignacio Ortiz Cabrera</li>
@@ -28,8 +36,15 @@
             <ul>
                 <li><span  class="fechas">Lugar de nacimiento:</span> Quillota, Chile</li>
             </ul>
+            <ul>
+                <li><span  class="fechas">Email: </span>francortiz.c@gmail.com</li>
+            </ul>
+            <ul>
+                <li><span  class="fechas">Telefono: </span>(+569) 6163 6673</li>
+            </ul>
+
         </section>
-        <section>
+        <section id="academic">
             <h2 class="titulo subtitulo">FORMACIÓN ACADÉMICA</h2>
             <dl>
                 <dt><span class="fechas">2014-2020: </span></dt>
@@ -43,7 +58,7 @@
                 
             </dl>
         </section>
-        <section>
+        <section id="exp">
             <h2 class="titulo subtitulo">EXPERIENCIA LABORAL</h2>
             <dl>
                 <dt> <span class="fechas">1975-1985: </span>
@@ -53,7 +68,7 @@
             </dl>
         </section>
     </main>
-    <footer>
+    <footer id="rrss">
         <p>Franco 
             <span class="fa fa-github"></span> 
             <span class="fa fa-linkedin"> </span>
