--- a/sobremi.html
+++ b/sobremi.html
@@ -1,16 +1,30 @@
 
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
 
     <body>
-        <nav> 
-        <a href="cvFrancoOrtiz/index.html">Home</a>
+        <nav>
+            <h1>Franco Ortiz</h1> 
+            <a href="/index.html">Home</a>
         </nav>
     
-        <section>
+        <section class="welcome">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem earum quae pariatur dolorum fuga quaerat mollitia animi exercitationem velit hic natus accusantium cupiditate nam alias, similique harum ut libero dolores!
             Sed assumenda amet saepe id dolorum! Quas voluptatem adipisci sunt enim culpa officiis quaerat optio aut fugiat animi dolorem laudantium possimus ipsam, sequi, ipsum eos! Reiciendis sint consequatur labore iure.
             Veniam, qui quod architecto nobis aliquam doloribus ducimus? Natus ipsam, facere, cumque officia dolore nobis quibusdam necessitatibus impedit commodi perferendis iure, corrupti placeat esse. At similique rem nulla temporibus quo?</p>
+        </section>
+
+        <section class="personal">Vida Personal
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem earum quae pariatur dolorum fuga quaerat mollitia animi exercitationem velit hic natus accusantium cupiditate nam alias, similique harum ut libero dolores!
+                Sed assumenda amet saepe id dolorum! Quas voluptatem adipisci sunt enim culpa officiis quaerat optio aut fugiat animi dolorem laudantium possimus ipsam, sequi, ipsum eos! Reiciendis sint consequatur labore iure.
+                Veniam, qui quod architecto nobis aliquam doloribus ducimus? Natus ipsam, facere, cumque officia dolore nobis quibusdam necessitatibus impedit commodi perferendis iure, corrupti placeat esse. At similique rem nulla temporibus quo?</p>
+        </section>
+        <section class="professional">Vida Profesional
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem earum quae pariatur dolorum fuga quaerat mollitia animi exercitationem velit hic natus accusantium cupiditate nam alias, similique harum ut libero dolores!
+                Sed assumenda amet saepe id dolorum! Quas voluptatem adipisci sunt enim culpa officiis quaerat optio aut fugiat animi dolorem laudantium possimus ipsam, sequi, ipsum eos! Reiciendis sint consequatur labore iure.
+                Veniam, qui quod architecto nobis aliquam doloribus ducimus? Natus ipsam, facere, cumque officia dolore nobis quibusdam necessitatibus impedit commodi perferendis iure, corrupti placeat esse. At similique rem nulla temporibus quo?</p>
         </section>
     </body>
     
