--- a/sobremi.html
+++ b/sobremi.html
@@ -7,7 +7,7 @@
     <body>
         <nav>
             <h1>Franco Ortiz</h1> 
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
         </nav>
     
         <section class="welcome">
