--- a/sobremi.html
+++ b/sobremi.html
@@ -7,7 +7,7 @@
     <body>
         <nav>
             <h1>Franco Ortiz</h1> 
-            <a href="index.html">Home</a>
+            <a href="index.html">< Volver</a>
         </nav>
     
         <section class="welcome">
@@ -22,9 +22,7 @@
                 Veniam, qui quod architecto nobis aliquam doloribus ducimus? Natus ipsam, facere, cumque officia dolore nobis quibusdam necessitatibus impedit commodi perferendis iure, corrupti placeat esse. At similique rem nulla temporibus quo?</p>
         </section>
         <section class="professional">Vida Profesional
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem earum quae pariatur dolorum fuga quaerat mollitia animi exercitationem velit hic natus accusantium cupiditate nam alias, similique harum ut libero dolores!
-                Sed assumenda amet saepe id dolorum! Quas voluptatem adipisci sunt enim culpa officiis quaerat optio aut fugiat animi dolorem laudantium possimus ipsam, sequi, ipsum eos! Reiciendis sint consequatur labore iure.
-                Veniam, qui quod architecto nobis aliquam doloribus ducimus? Natus ipsam, facere, cumque officia dolore nobis quibusdam necessitatibus impedit commodi perferendis iure, corrupti placeat esse. At similique rem nulla temporibus quo?</p>
+            <p>Soy un Desarrollador con muchas ganas de aprender y crecer como profesional. Cuento con experiencia en creación de aplicaciones web del lado del servidor (Back-end) utilizando varios lenguajes y Frameworks con conocimiento en APIs. Me entusiasma la ciencia de datos, computer vision, el machine learning y el desarrollo web. Me gusta aprender nuevas tecnologías y desarrollar videojuegos en mi tiempo libre.</p>
         </section>
     </body>
     
